@@ -5,7 +5,7 @@
  *
  * @package    piwam
  * @subpackage form
- * @author     Your name here
+ * @author     Adrien Mogenet
  * @version    SVN: $Id: sfPropelFormTemplate.php 10377 2008-07-21 07:10:32Z dwhittle $
  */
 class CotisationForm extends BaseCotisationForm
@@ -20,20 +20,23 @@ class CotisationForm extends BaseCotisationForm
     public function configure()
     {
         unset($this['created_at'], $this['updated_at']);
-        unset($this['enregistre_par'], 	$this['mis_a_jour_par']);
-        unset($this['actif'], 			$this['association_id']);
+        unset($this['enregistre_par'], $this['mis_a_jour_par']);
+        unset($this['actif'], $this['association_id']);
         unset($this['date']);
 
-        if ($this->getObject()->isNew()) {
+        if ($this->getObject()->isNew())
+        {
             $this->widgetSchema['enregistre_par'] = new sfWidgetFormInputHidden();
             $this->widgetSchema['association_id'] = new sfWidgetFormInputHidden();
-            $this->setDefault('enregistre_par', sfContext::getInstance()->getUser()->getAttribute('user_id', null, 'user'));
-            $this->setDefault('association_id', sfContext::getInstance()->getUser()->getAttribute('association_id', null, 'user'));
             $this->validatorSchema['association_id'] = new sfValidatorInteger();
             $this->validatorSchema['enregistre_par'] = new sfValidatorInteger();
         }
+        else
+        {
+            $this->widgetSchema['mis_a_jour_par'] = new sfWidgetFormInputHidden();
+            $this->validatorSchema['mis_a_jour_par'] = new sfValidatorInteger();
+        }
 
-        $this->widgetSchema['mis_a_jour_par'] = new sfWidgetFormInputHidden();
         $this->widgetSchema['actif'] = new sfWidgetFormInputHidden();
         $this->setDefault('actif', 1);
 
@@ -51,7 +54,6 @@ class CotisationForm extends BaseCotisationForm
         $this->widgetSchema['membre_id']->setAttribute('class', 'formInputLarge');
         $this->widgetSchema['montant']->setAttribute('class', 'formInputShort');
 
-        $this->validatorSchema['mis_a_jour_par'] = new sfValidatorInteger();
         $this->validatorSchema['actif'] = new sfValidatorBoolean();
         $this->validatorSchema['montant'] = new sfValidatorAmount(array('min' => 0), array('min' => 'ne peut être négatif'));
 
